--- a/error-free-text-app/Dockerfile
+++ b/error-free-text-app/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:21
 WORKDIR /app
-COPY error-free-text-app-0.0.1.jar app.jar
+COPY error-free-text-app-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
 EXPOSE 8080
