--- a/error-free-text-app/build.gradle
+++ b/error-free-text-app/build.gradle
@@ -6,12 +6,17 @@ plugins {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 
-    compileOnly('org.projectlombok:lombok:1.18.32')
-    annotationProcessor('org.projectlombok:lombok:1.18.32')
+    implementation('org.liquibase:liquibase-core')
 
-    testCompileOnly('org.projectlombok:lombok:1.18.32')
-    testAnnotationProcessor('org.projectlombok:lombok:1.18.32')
+    compileOnly('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
+
+    runtimeOnly('org.postgresql:postgresql')
+
+    testCompileOnly('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('uk.org.webcompere:model-assert:1.0.0')
