add h2-db profile

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#DB profile selection (postgres-container)
-spring.profiles.active=postgres-container
+#DB profile selection (postgres-container or h2)
+spring.profiles.active=h2
 
 # Liquibase configuration
 spring.liquibase.enabled=true
