Add global REST exception handler

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.profiles.active=h2
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
+# Jackson configuration
+spring.jackson.default-property-inclusion=non_null
+
 # Application parameters configuration
