--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 spring.jackson.default-property-inclusion=non_null
 
 # Application parameters configuration
+text.splitter.max-chunk-size=10000
