add yandex speller REST client and data models

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jackson.default-property-inclusion=non_null
 
 # Application parameters configuration
 text.splitter.max-chunk-size=10000
+yandex.speller.base-url=https://speller.yandex.net/services/spellservice.json
+yandex.speller.check-texts.uri=/checkTexts
