add task provider, tasks processing service and job

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jackson.default-property-inclusion=non_null
 text.splitter.max-chunk-size=10000
 yandex.speller.base-url=https://speller.yandex.net/services/spellservice.json
 yandex.speller.check-texts.uri=/checkTexts
+correction.task.provider.page-size=50
