minor refactor of task processing

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -13,3 +13,4 @@ text.splitter.max-chunk-size=10000
 yandex.speller.base-url=https://speller.yandex.net/services/spellservice.json
 yandex.speller.check-texts.uri=/checkTexts
 correction.task.provider.page-size=50
+correction.task.job.delay=60000
