add asynchronous processing for SingleCorrectionTaskProcessor

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # Jackson configuration
 spring.jackson.default-property-inclusion=non_null
 
+spring.threads.virtual.enabled=true
+
 # Application parameters configuration
 text.splitter.max-chunk-size=10000
 yandex.speller.base-url=https://speller.yandex.net/services/spellservice.json
