--- a/error-free-text-app/build.gradle
+++ b/error-free-text-app/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'com.palantir.docker' version '0.36.0'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
