add RestClient config with timeouts and retry logic

--- a/error-free-text-app/src/main/resources/application.properties
+++ b/error-free-text-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#DB profile selection (postgres-container or h2)
-spring.profiles.active=h2
+#Profile selection (docker-compose or local)
+spring.profiles.active=local
 
 # Liquibase configuration
 spring.liquibase.enabled=true
@@ -12,7 +12,13 @@ spring.threads.virtual.enabled=true
 
 # Application parameters configuration
 text.splitter.max-chunk-size=10000
-yandex.speller.base-url=https://speller.yandex.net/services/spellservice.json
-yandex.speller.check-texts.uri=/checkTexts
 correction.task.provider.page-size=50
 correction.task.job.delay=60000
+
+yandex.speller.base-url=https://speller.yandex.net/services/spellservice.json
+yandex.speller.check-texts-uri=/checkTexts
+yandex.speller.connection-timeout=3000
+yandex.speller.read-timeout=5000
+yandex.speller.retry-max-attempts=3
+yandex.speller.retry-delay=1000
+yandex.speller.retry-multiplier=2
