--- a/error-free-text-app/build.gradle
+++ b/error-free-text-app/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-validation')
+    implementation('org.springframework.retry:spring-retry')
 
     implementation('org.liquibase:liquibase-core')
     implementation('com.h2database:h2')
