refactor integration tests and test configuration

--- a/error-free-text-app/src/test/resources/application.properties
+++ b/error-free-text-app/src/test/resources/application.properties
@@ -1,6 +1,24 @@
 #Profile selection (docker-compose or local or test)
 spring.profiles.active=test
 
-yandex.speller.connection-timeout=3000
+# Liquibase configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog-test-master.xml
+
+# Jackson configuration
+spring.jackson.default-property-inclusion=non_null
+
+
+# Application parameters configuration
+text.splitter.max-chunk-size=10000
+
+correction.task.provider.page-size=50
+
+yandex.speller.base-url=http://localhost:8085
+yandex.speller.check-texts-uri=/checkTexts
+yandex.speller.read-timeout=1000
+yandex.speller.connection-timeout=1000
 yandex.speller.retry-delay=10
 yandex.speller.retry-multiplier=1
+yandex.speller.retry-max-attempts=3
+
